--- a/_includes/about_section.html
+++ b/_includes/about_section.html
@@ -16,7 +16,7 @@
 	                        <div class="aboutDetails">
 	                            <h4>Some Text Goes Here</h4>
 
-					            <a href="#" class="button">Vist My Blog</a>
+					            <a href="/blog" class="button">Vist My Blog</a>
 				        	</div>
 				            
                         </div>                      
