--- a/_includes/contact_section.html
+++ b/_includes/contact_section.html
@@ -26,7 +26,7 @@
                         <div class="column half">
                             <div class="inquire wow bounceIn">
                                 <h3>Planning a Project?</h3>
-                                <p>Turducken short ribs t-bone shank tri-tip strip steak porchetta meatball pork brisket prosciutto pig tongue flank. Turducken pastrami ball tip, landjaeger meatball ham swine. Cow tail jerky turducken salami frankfurter.</p><a href="project.html" class="button">Launch Project Planner</a>
+                                <p>Please fill out our project planner to give us a better understanding of you, your business and your product. We'll get back to you as soon as possible. If you already have a brief, please fill out the required fields then attach it at the bottom.</p><a href="project.html" class="button">Launch Project Planner</a>
                             </div>
                         </div>                        
                     </div>
