--- a/_includes/skills_section.html
+++ b/_includes/skills_section.html
@@ -7,39 +7,39 @@
                 <div class="row clearfix ">
                     <div class="column half wow fadeIn">
                         <div class="skill design">           
-                            <h3>Service Title</h3>
-                            <p>Bacon ipsum dolor sit amet commodo dolor minim, deserunt pork loin in ball tip ground round turducken andouille occaecat ea. Dolore incididunt corned beef velit voluptate leberkas.</p>
+                            <h3>Web & Interface Design</h3>
+                            <p>Overhaul your old boring site, create a brand new interface for your application, design a new online store. We'll design something fresh and let your devs take over, or we'll develop it for you.</p>
                         </div>
                     </div>
                     <div class="column half wow fadeIn">
                         <div class="skill development">
-                            <h3>Service Title</h3>
-                            <p>Enim corned beef pork loin ad, tail minim dolore shank tri-tip frankfurter bacon in proident ut brisket. Velit aliquip sunt chicken eu in hamburger. Shankle dolore strip steak eiusmod shoulder salami, ullamco sint leberkas turkey aute est sausage. Bacon turkey consequat jerky short ribs.</p>
+                            <h3>Web Development</h3>
+                            <p>If you've already got a design, we can develop custom systems based on your requirements, convert designs to HTML5, integrate content management systems and adapt it to become responsive.</p>
                         </div>
                     </div>
 
-                    <div class="column half wow fadeIn">
-                        <div class="skill hosting">
-                            <h3>Service Title</h3>
-                            <p>Bacon ipsum dolor sit amet commodo dolor minim, deserunt pork loin in ball tip ground round turducken andouille occaecat ea. Dolore incididunt corned beef velit voluptate leberkas.</p>
-                        </div>
-                    </div>
-                    <div class="column half wow fadeIn">
-                        <div class="skill ecommerce">
-                            <h3>Service Title</h3>
-                            <p>Enim corned beef pork loin ad, tail minim dolore shank tri-tip frankfurter bacon in proident ut brisket. Velit aliquip sunt chicken eu in hamburger. Shankle dolore strip steak eiusmod shoulder salami, ullamco sint leberkas turkey aute est sausage. Bacon turkey consequat jerky short ribs.</p>
-                        </div>
-                    </div>
-
-                    <div class="column half wow fadeIn">
-                        <div class="skill tuition">
-                            <h3>Service Title</h3>
-                            <p>Bacon ipsum dolor sit amet commodo dolor minim, deserunt pork loin in ball tip ground round turducken andouille occaecat ea. Dolore incididunt corned beef velit voluptate leberkas.</p>
-                        </div>
-                    </div>
                     <div class="column half wow fadeIn">
                         <div class="skill apps">
-                            <h3>Service Title</h3>
-                            <p>Enim corned beef pork loin ad, tail minim dolore shank tri-tip frankfurter bacon in proident ut brisket. Velit aliquip sunt chicken eu in hamburger. Shankle dolore strip steak eiusmod shoulder salami, ullamco sint leberkas turkey aute est sausage. Bacon turkey consequat jerky short ribs.</p>
+                            <h3>Logo Design & Brand Identity</h3>
+                            <p>Explore thought processes and logo design concepts with us to develop a new brand identity. If you've already developed a brand, we'll help you keep it consistent with social media designs, business cards, flyers, etc.</p>
+                        </div>
+                    </div>
+                    <div class="column half wow fadeIn">
+                        <div class="skill hosting">
+                            <h3>Web Hosting</h3>
+                            <p>Fully managed and totally customised web hosting for the beginner or advanced user. If you need help setting up your site, emails, FTP, domain names, databases or backups - we've got you covered.</p>
+                        </div>
+                    </div>
+
+                    <div class="column half wow fadeIn">
+                        <div class="skill ecommerce">
+                            <h3>E-Commerce</h3>
+                            <p>Fully featured, content managed commerce system. Designed from scratch you'll have the ability ton add/remove products, accept payments, see reports, track inventory and much more.</p>
+                        </div>
+                    </div>
+                    <div class="column half wow fadeIn">
+                        <div class="skill tuition">
+                            <h3>Consultation Services</h3>
+                            <p>We can provide tuition or consultation for beginners or for the more experienced looking for help with strategy and new skills, maybe you want to make money as a freelancer? Email us for a quote or advice</p>
                         </div>
                     </div>
