--- a/style.scss
+++ b/style.scss
@@ -9,6 +9,7 @@
 @import "_variables";
 @import "_animate";
 @import "_font-awesome";
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700|Open+Sans:300italic,400|Raleway:700,200);
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
