--- a/_layouts/frontPage.html
+++ b/_layouts/frontPage.html
@@ -85,4 +85,17 @@
 
 
     </body>
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: [ 'Montserrat:400,700:latin', 'Open+Sans:300italic,400:latin', 'Raleway:700,200:latin' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })(); </script>    
 </html>
